# TesseractCppDemo

./: .gitignore  CMakeLists.txt
src/: main.cpp  utils.cpp  utils.h
